--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="react-root"></div>
-    <script src="../webpack-bundle.js"></script>
+    <script src="./webpack-bundle.js"></script>
   </body>
 </html>
